@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -49,6 +49,6 @@ public class IMAPSSLStore extends IMAPStore {
      * represents a specific IMAP server.
      */
     public IMAPSSLStore(Session session, URLName url) {
-	super(session, url, "imaps", 993, true); // call super constructor
+	super(session, url, "imaps", true); // call super constructor
     }
 }
