@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -49,6 +49,6 @@ public class SMTPSSLTransport extends SMTPTransport {
 
     /** Constructor */
     public SMTPSSLTransport(Session session, URLName urlname) {
-	super(session, urlname, "smtps", 465, true);
+	super(session, urlname, "smtps", true);
     }
 }
