@@ -5,7 +5,7 @@
 
   DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  
-  Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+  Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  
   The contents of this file are subject to the terms of either the GNU
   General Public License Version 2 only ("GPL") or the Common Development
@@ -388,7 +388,16 @@ If not set, the default port will be used.
 </TR>
 
 <TR>
-<TD>mail.smtp.SSLSocketFactory</TD>
+<TD>mail.smtp.ssl.enable</TD>
+<TD>boolean</TD>
+<TD>
+If set to true, use SSL to connect and use the SSL port by default.
+Defaults to false for the "smtp" protocol and true for the "smtps" protocol.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.ssl.socketFactory</TD>
 <TD>SSLSocketFactory</TD>
 <TD>
 If set to a class that extends the
@@ -400,7 +409,7 @@ instance of a class, not a name, and must be set using the
 </TR>
 
 <TR>
-<TD>mail.smtp.SSLSocketFactory.class</TD>
+<TD>mail.smtp.ssl.socketFactory.class</TD>
 <TD>String</TD>
 <TD>
 If set, specifies the name of a class that extends the
@@ -410,12 +419,32 @@ will be used to create SMTP SSL sockets.
 </TR>
 
 <TR>
-<TD>mail.smtp.SSLSocketFactory.port</TD>
+<TD>mail.smtp.ssl.socketFactory.port</TD>
 <TD>int</TD>
 <TD>
 Specifies the port to connect to when using the specified socket
 factory.
 If not set, the default port will be used.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.ssl.protocols</TD>
+<TD>string</TD>
+<TD>
+Specifies the SSL protocols that will be enabled for SSL connections.
+The property value is a whitespace separated list of tokens acceptable
+to the <code>javax.net.ssl.SSLSocket.setEnabledProtocols</code> method.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.ssl.ciphersuites</TD>
+<TD>string</TD>
+<TD>
+Specifies the SSL cipher suites that will be enabled for SSL connections.
+The property value is a whitespace separated list of tokens acceptable
+to the <code>javax.net.ssl.SSLSocket.setEnabledCipherSuites</code> method.
 </TD>
 </TR>
 
@@ -458,26 +487,6 @@ in the {@link javax.mail.Transport#isConnected isConnected} method.
 In some cases sendmail will respond slowly after many NOOP commands;
 use of RSET avoids this sendmail issue.
 Defaults to false.
-</TD>
-</TR>
-
-<TR>
-<TD>mail.smtp.ssl.protocols</TD>
-<TD>string</TD>
-<TD>
-Specifies the SSL protocols that will be enabled for SSL connections.
-The property value is a whitespace separated list of tokens acceptable
-to the <code>javax.net.ssl.SSLSocket.setEnabledProtocols</code> method.
-</TD>
-</TR>
-
-<TR>
-<TD>mail.smtp.ssl.ciphersuites</TD>
-<TD>string</TD>
-<TD>
-Specifies the SSL cipher suites that will be enabled for SSL connections.
-The property value is a whitespace separated list of tokens acceptable
-to the <code>javax.net.ssl.SSLSocket.setEnabledCipherSuites</code> method.
 </TD>
 </TR>
 
